# metaplex-collection-scraper

./: Cargo.toml  index.html  table.css  table.js
collections/: BUjZjAS2vbbb65g7Z1Ca9ZRVYoJscURG5L3AkVvHP9ac.json
src/: main.rs
