[package]
name = "metaplex-collection-scraper"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = "1.21.2"
futures = "0.3.25"
reqwest = "0.11.12"
reqwest-middleware = "0.1.6"
reqwest-retry = "0.1.5"
serde = "1.0.147"
serde_json = "1.0.87"
serde_with = "2.0.1"
solana-sdk = "1.13.4"
solana-client = "1.13.4"
solana-account-decoder = "1.13.4"
mpl-token-metadata = "1.4.3"
